--- a/index.html
+++ b/index.html
@@ -872,7 +872,7 @@ animation: auto 12s infinite ease-in;
   height: auto;
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   line-height: 22.6px;
-  color: #081065;
+  color: #063273f4;
   word-spacing: 1.5px;
   text-align: left;
   font-size: 18.49px; 
@@ -1051,22 +1051,18 @@ height: 750px;
     font-family: georgia;
     justify-content: center;
     align-items: center;
-    background: #222222eb;
-    border: 0.1rem solid rgba(152, 152, 152, 0.801); 
-    color: #fff; 
-    border-radius: 1rem;
-    padding: 8px; 
-    font-size: 20px;
+    background: transparent;
+    border: 0.12rem solid #aaaaaacb;
+    color: #848383da; 
+    padding: 10px; 
+    font-size: 22px;
     cursor: pointer;
-    border-bottom: 1rem;
-    border-top: 1rem;
-    border-radius: 1rem;
     text-align: center;
-    margin-top: 2.5rem;
-    margin-bottom: 1rem;
+    margin-top: 2rem;
+    
 }
 .SPan:hover{
-    background:green;
+    background:rgb(0, 151, 0);
     color: #ff0;
     transition: 0.3s linear;
     box-shadow: 6px 6px 0.6rem 0.15px red;
@@ -2485,6 +2481,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
