--- a/index.html
+++ b/index.html
@@ -1067,8 +1067,6 @@ height: 750px;
     font-size: 22px;
     cursor: pointer;
     text-align: center;
-    margin-bottom: 2rem;
-    
 }
 .SPan:hover{
     background:rgb(0, 151, 0);
@@ -1783,7 +1781,7 @@ function myFunction() {
             <img src="https://previews.123rf.com/images/michal812/michal8121306/michal812130600184/20531769-burkina-faso-on-actual-vintage-political-map-of-africa-with-flags.jpg" alt="Africa">
             <figure>
               <figcaption style=" margin-top: 0.1rem; color: #3e3e3e; font-family: 'verdana'; font-size: 12px; text-align: left;">
-                Carte du Burkina Faso en Afrique 
+                Le Burkina Faso en Afrique 
               </figcaption>
               </figure>
             </div>
@@ -1795,7 +1793,7 @@ function myFunction() {
          <img src="https://ow-prayer-api.info/files/en/images/main-maps/burk-02.png" alt="Carte du Burkina Faso">
          <figure>
           <figcaption style=" margin-top: 0.1rem; color: #3e3e3e; font-family: 'verdana'; font-size: 12px; text-align: left;">
-            Carte du Burkina Faso avec les pays frontaliers et sa capitale OUAGADOUGOU
+            Le Burkina Faso, sa capitale OUAGADOUGOU et les pays frontaliers
           </figcaption>
           </figure>
         </div>
@@ -2505,6 +2503,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
