--- a/index.html
+++ b/index.html
@@ -2036,11 +2036,11 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
   <hr style="color: rgb(13, 31, 136); justify-self: center;"> 
   <br>      
   <span style="background: transparent; font-family: 'georgia'; font-size: 25px; color: rgb(42, 61, 172); text-align: left;">
-        <strong>
+        <strong><a name="Education"></a>
           Le Plan Axial   
         </strong>
       </span>
-      <p>      <a name="Education">
+      <p>      
        <br>
   Dans son focus d'atteindre largement les divers challenges et aider à changer la perception publique de ce qu'est le handicap et pourquoi l'inclusion est si importante, la VISION a été compartimentée en (4) points essentiels d'action comme suit:
   <br> 
@@ -2499,6 +2499,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
