--- a/index.html
+++ b/index.html
@@ -1180,8 +1180,6 @@ a:visited{
   height: auto;
 }
 
-
-
 .ORDI1 img{
 width: 100%;
 height: 200px;
@@ -2034,16 +2032,16 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 <div class="k1">
 
   <hr style="color: rgb(13, 31, 136); justify-self: center;"> 
-  <br>      
+      
   <span style="background: transparent; font-family: 'georgia'; font-size: 25px; color: rgb(42, 61, 172); text-align: left;">
-        <strong><a name="Education"></a>
+        <strong>
           Le Plan Axial   
-        </strong>
-      </span>
+        </strong> 
+      </span>          <a name="Education"></a>
       <p>      
        <br>
   Dans son focus d'atteindre largement les divers challenges et aider à changer la perception publique de ce qu'est le handicap et pourquoi l'inclusion est si importante, la VISION a été compartimentée en (4) points essentiels d'action comme suit:
-  <br> 
+
       </p> 
         <b>
      <a href="https://www.education.gov.bf/accueil" style="color: green;" target="blank">1. L'éducation</a>
@@ -2499,6 +2497,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
