--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
             cursor: pointer;
             height: auto;
             width: 100%;
-            border-radius: 2rem;
+            border-radius: 0.5rem;
             background: transparent;
             color:rgba(25, 43, 205, 0.992);
             margin-top: 1.25rem;
@@ -213,10 +213,9 @@
 }
 
 .TYK1:hover{
-  border-radius: 2rem;
-            background: -webkit-linear-gradient(rgba(255, 107, 107, 0.477) 1%,red) 99%;
-            border-bottom: 0.69rem solid rgb(58, 255, 4);
-            color: #2e2828f3;
+  background: -webkit-linear-gradient(rgb(255, 4, 0) 1%,red) 99%;
+            border-bottom: 0.69rem solid rgb(45, 255, 34);
+            color: rgba(255, 252, 252, 0.992);
             transition: 0.44s ease;
 }
 
@@ -288,21 +287,20 @@
             cursor: pointer;
             height: auto;
             width: 100%;
-            border-radius: 2rem;
+            border-radius: 0.5rem;
             background: transparent;
             color: rgba(25, 43, 205, 0.992);
             margin-top: 1.25rem;
             padding: 9px;
             font-family:'arial black';
-            font-size: 15.85px;
+            font-size: 16px;
           }
 
           .myDiv:hover{
-            background: -webkit-linear-gradient(rgba(255, 107, 107, 0.477) 1%,red) 99%;
-            border-bottom: 0.69rem solid rgb(58, 255, 4);
-            color: #2e2828f3;
+            background: -webkit-linear-gradient(rgb(255, 4, 0) 1%,red) 99%;
+            border-bottom: 0.69rem solid rgb(45, 255, 34);
+            color: rgba(255, 252, 252, 0.992);
             transition: 0.44s ease;
-      
           }
 
           .myDiv1{
@@ -313,7 +311,7 @@
             cursor: pointer;
             height: auto;
             width: 100%;
-            border-radius: 2rem;
+            border-radius: 0.5rem;
             background: transparent;
             color: rgba(25, 43, 205, 0.992);
             margin-top: 1.25rem;
@@ -323,9 +321,9 @@
           }
 
           .myDiv1:hover{
-            background: -webkit-linear-gradient(rgba(255, 107, 107, 0.477) 1%,red) 99%;
-            border-bottom: 0.69rem solid rgb(58, 255, 4);
-            color: #2e2828f3;
+            background: -webkit-linear-gradient(rgb(255, 4, 0) 1%,red) 99%;
+            border-bottom: 0.69rem solid rgb(45, 255, 34);
+            color: rgba(255, 252, 252, 0.992);
             transition: 0.44s ease;
           }
 
@@ -337,7 +335,7 @@
             cursor: pointer;
             height: auto;
             width: 100%;
-            border-radius: 2rem;
+            border-radius: 0.5rem;
             background: transparent;
             color:rgba(25, 43, 205, 0.992);
             margin-top: 1.25rem;
@@ -347,9 +345,9 @@
             }
 
           .myDiv2:hover{
-            background: -webkit-linear-gradient(rgba(255, 107, 107, 0.477) 1%,red) 99%;
-            border-bottom: 0.69rem solid rgb(58, 255, 4);
-            color: #2e2828f3;
+            background: -webkit-linear-gradient(rgb(255, 4, 0) 1%,red) 99%;
+            border-bottom: 0.69rem solid rgb(45, 255, 34);
+            color: rgba(255, 252, 252, 0.992);
             transition: 0.44s ease;
           }
 
@@ -361,7 +359,7 @@
             cursor: pointer;
             height: auto;
             width: 100%;
-            border-radius: 2rem;
+            border-radius: 0.5rem;
             background: transparent;
             color:rgba(25, 43, 205, 0.992);
             margin-top: 1.25rem;
@@ -370,9 +368,9 @@
             font-size: 15.85px;
           }
           .myDivT:hover{
-            background: -webkit-linear-gradient(rgba(255, 107, 107, 0.477) 1%,red) 99%;
-            border-bottom: 0.69rem solid rgb(58, 255, 4);
-            color: #2e2828f3;
+            background: -webkit-linear-gradient(rgb(255, 4, 0) 1%,red) 99%;
+            border-bottom: 0.69rem solid rgb(45, 255, 34);
+            color: rgba(255, 252, 252, 0.992);
             transition: 0.44s ease;
           }
 
@@ -384,7 +382,7 @@
             cursor: pointer;
             height: auto;
             width: 100%;
-            border-radius: 2rem;
+            border-radius: 0.5rem;
             background: transparent;
             color:rgba(25, 43, 205, 0.992);
             margin-top: 1.25rem;
@@ -394,9 +392,9 @@
           }
 
           .Peinture:hover{
-            background: -webkit-linear-gradient(rgba(255, 107, 107, 0.477) 1%,red) 99%;
-            border-bottom: 0.69rem solid rgb(58, 255, 4);
-            color: #2e2828f3;
+            background: -webkit-linear-gradient(rgb(255, 4, 0) 1%,red) 99%;
+            border-bottom: 0.69rem solid rgb(45, 255, 34);
+            color: rgba(255, 252, 252, 0.992);
             transition: 0.44s ease;
           }
 
@@ -409,7 +407,7 @@
             cursor: pointer;
             height: auto;
             width: 100%;
-            border-radius: 2rem;
+            border-radius: 0.5rem;
             background: transparent;
             color:rgba(25, 43, 205, 0.992);;
             margin-top: 1.25rem;
@@ -419,9 +417,9 @@
             }
 
           .myDiv6:hover{
-            background: -webkit-linear-gradient(rgba(255, 107, 107, 0.477) 1%,red) 99%;
-            border-bottom: 0.69rem solid rgb(58, 255, 4);
-            color: #2e2828f3;
+            background: -webkit-linear-gradient(rgb(255, 4, 0) 1%,red) 99%;
+            border-bottom: 0.69rem solid rgb(45, 255, 34);
+            color: rgba(255, 252, 252, 0.992);
             transition: 0.44s ease;
           }
 
@@ -2509,6 +2507,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
