--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 .top-container{
         display: grid;
-        grid-template-columns: 0.5fr 0.55fr 0.5fr 1.45fr;
+        grid-template-columns: 0.55fr 0.75fr 0.5fr 1.45fr;
         justify-content: center;
         justify-items: center;
         width: 100%;
@@ -184,14 +184,14 @@
       grid-template-rows: 0.85fr 0.8fr 0.5fr 0.95fr;
                  justify-content: center;
                  justify-items: center;
-                 background: rgba(36, 50, 172, 0.992);
+                 background: rgba(12, 24, 133, 0.992);
                  width: 100%;
                  height: 120px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 0 2.98rem 1px rgba(123, 123, 123, 0.421);
+                 box-shadow: 0 0 2.9rem 1px rgba(88, 88, 88, 0.525);
                  border-bottom: 5.25rem solid #fff;  
           }
           
@@ -208,15 +208,16 @@
             color:rgba(25, 43, 205, 0.992);
             margin-top: 1.25rem;
             padding: 9px;
-            font-family:'arial black';
-            font-size: 15.85px;
+            font-family:'comic sans ms';
+            font-size: 18px;
 }
 
 .TYK1:hover{
   background: -webkit-linear-gradient(rgb(255, 4, 0) 1%,red) 99%;
             border-bottom: 0.69rem solid rgb(45, 255, 34);
             color: rgba(255, 252, 252, 0.992);
-            transition: 0.44s ease;
+            transition: 0.35s ease;
+            box-shadow: 4.4px -4.5px 0.5rem 0 rgba(8, 17, 77, 0.992);
 }
 
           .navbar0{
@@ -257,25 +258,26 @@
           flex-direction: column; 
           justify-content: center; 
           align-items: center; 
-          color:rgba(37, 51, 180, 0.992);
+          color:rgba(39, 54, 192, 0.992);
           width: auto; 
           height: 74.5px; 
           padding: 8px; 
-          font-size: 1rem; 
+          font-size: 1.1rem; 
           font-family: 'arial black'; 
           border-top: 0.12rem solid rgba(37, 51, 180, 0.277);
           border-bottom-left-radius: 50rem;
           border-bottom-right-radius: 50rem;
-          background: -webkit-linear-gradient(orangered 0%, yellow 100%);
+          background: -webkit-linear-gradient( red 0%,  #fff 100%);
           box-shadow: 0.8px 2.47px 0.2rem 0 orangered;
           margin-left: 14px;
           margin-top: 0.2rem;
          }
 
          .YIKI:hover{
-          background: -webkit-linear-gradient( red 0%,  #fff 100%);
-          transition: 0.27s ease-in;
+          background: -webkit-linear-gradient(#f4f2f2f7 0%, #ffffffff 100%);
+          transition: 0.29s ease;
           color: #000;
+          box-shadow: 0.2px 0.3px 0.55rem 0 #111111bc;
          }
 
 
@@ -292,15 +294,16 @@
             color: rgba(25, 43, 205, 0.992);
             margin-top: 1.25rem;
             padding: 9px;
-            font-family:'arial black';
-            font-size: 16px;
+            font-family:'comic sans ms';
+            font-size: 18px;
           }
 
           .myDiv:hover{
             background: -webkit-linear-gradient(rgb(255, 4, 0) 1%,red) 99%;
             border-bottom: 0.69rem solid rgb(45, 255, 34);
             color: rgba(255, 252, 252, 0.992);
-            transition: 0.44s ease;
+            transition: 0.35s ease;
+            box-shadow: 4.4px -4.5px 0.5rem 0 rgba(8, 17, 77, 0.992);
           }
 
           .myDiv1{
@@ -316,15 +319,16 @@
             color: rgba(25, 43, 205, 0.992);
             margin-top: 1.25rem;
             padding: 9px;
-            font-family:'arial black';
-            font-size: 15.85px;
+            font-family:'comic sans ms';
+            font-size: 18px;
           }
 
           .myDiv1:hover{
             background: -webkit-linear-gradient(rgb(255, 4, 0) 1%,red) 99%;
             border-bottom: 0.69rem solid rgb(45, 255, 34);
             color: rgba(255, 252, 252, 0.992);
-            transition: 0.44s ease;
+            transition: 0.35s ease;
+            box-shadow: 4.4px -4.5px 0.5rem 0 rgba(8, 17, 77, 0.992);
           }
 
           .myDiv2{
@@ -340,15 +344,16 @@
             color:rgba(25, 43, 205, 0.992);
             margin-top: 1.25rem;
             padding: 9px;
-            font-family:'arial black';
-            font-size: 15.85px;
+            font-family:'comic sans ms';
+            font-size: 18px;
             }
 
           .myDiv2:hover{
             background: -webkit-linear-gradient(rgb(255, 4, 0) 1%,red) 99%;
             border-bottom: 0.69rem solid rgb(45, 255, 34);
             color: rgba(255, 252, 252, 0.992);
-            transition: 0.44s ease;
+            transition: 0.35s ease;
+            box-shadow: 4.4px -4.5px 0.5rem 0 rgba(8, 17, 77, 0.992);
           }
 
           .myDivT{
@@ -364,14 +369,15 @@
             color:rgba(25, 43, 205, 0.992);
             margin-top: 1.25rem;
             padding: 9px;
-            font-family:'arial black';
-            font-size: 15.85px;
+            font-family:'comic sans ms';
+            font-size: 18px;
           }
           .myDivT:hover{
             background: -webkit-linear-gradient(rgb(255, 4, 0) 1%,red) 99%;
             border-bottom: 0.69rem solid rgb(45, 255, 34);
             color: rgba(255, 252, 252, 0.992);
-            transition: 0.44s ease;
+            transition: 0.35s ease;
+            box-shadow: 4.4px -4.5px 0.5rem 0 rgba(8, 17, 77, 0.992);
           }
 
           .Peinture{
@@ -387,15 +393,16 @@
             color:rgba(25, 43, 205, 0.992);
             margin-top: 1.25rem;
             padding: 9px;
-            font-family:'arial black';
-            font-size: 15.85px;
+            font-family:'comic sans ms';
+            font-size: 18px;
           }
 
           .Peinture:hover{
             background: -webkit-linear-gradient(rgb(255, 4, 0) 1%,red) 99%;
             border-bottom: 0.69rem solid rgb(45, 255, 34);
             color: rgba(255, 252, 252, 0.992);
-            transition: 0.44s ease;
+            transition: 0.35s ease;
+            box-shadow: 4.4px -4.5px 0.5rem 0 rgba(8, 17, 77, 0.992);
           }
 
 
@@ -412,15 +419,16 @@
             color:rgba(25, 43, 205, 0.992);;
             margin-top: 1.25rem;
             padding: 9px;
-            font-family:'arial black';
-            font-size: 15.85px;
+            font-family:'comic sans ms';
+            font-size: 18px;
             }
 
           .myDiv6:hover{
             background: -webkit-linear-gradient(rgb(255, 4, 0) 1%,red) 99%;
             border-bottom: 0.69rem solid rgb(45, 255, 34);
-            color: rgba(255, 252, 252, 0.992);
-            transition: 0.44s ease;
+            color: rgba(255, 255, 255, 0.992);
+            transition: 0.35s ease;
+            box-shadow: 4.4px -4.5px 0.5rem 0 rgba(8, 17, 77, 0.992);
           }
 
 
@@ -1835,7 +1843,7 @@ function myFunction() {
          <a href="https://lepays.bf/personnes-handicapees-au-burkina-avec-eux-nous-avons-parle-exclusion-discrimination-frustration-sexe/" style="font-size: 22px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; line-height: 22px;" target="_blank">
           <br>
           <br>
-          Les fréquentes discriminations et l'exclusion les rongent au quotidien</a>.
+          Les fréquentes discriminations et l'exclusion les rongent au quotidien [Lire plus...]</a>.
           <br>
           <br> 
          Alors si elles vivent exclues de la société comme une île au milieu d'un océan très loin de la terre ferme sans aucune connection, il leur sera difficile de rencontrer des opportunités afin de se réaliser. 
@@ -1870,7 +1878,7 @@ Tiki N'Yiki veut travailler à changer ces mentalités, faire tomber des barriè
   <img src="https://www.zupimages.net/up/23/28/mhd5.jpg" alt="Tableau">
 <figure>
 <figcaption style="color: #545454eb; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; margin-top: -3px; font-size: 15px; text-align: left; line-height: 17px;">
-<b>L'alphabet avec la lettre M</b>
+<b>Alphabet */* Lettre [ M ]</b>
 </figcaption>
 </figure>
 </div>
@@ -1998,12 +2006,13 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
       </figure>
     </div>
 
-  <div class="KA" style="color: #0366cffe; display: flex; justify-content: center; align-items: center; border-left: 0.45rem solid lightgrey;">
+  <div class="KA" style="color: #01458efe; display: flex; justify-content: center; align-items: center; border-left: 0.45rem solid lightgrey;">
     
-    <p style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size: 17.5px; text-align: justify; padding: 10px; line-height: 23px;">
+    <p style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size: 17px; text-align: justify; padding: 10px; line-height: 23px;">
     <b>Vu ces différentes difficultés faites de barrières sociales, 
-      d'insuffisance d'infractrustures, de services et de moyens de déplacements adaptés, Tiki N'Yiki envisage construire un établissement adapté d'étude nommé Accadémie Tiki N'Yiki pour soutenir les élèves et étudiant-es en situation de handicap.
-      Cette académie accueillera des étudiant-es de différents grades et sera constituée de salles de classe, de chambres adaptées, de salles de conditionnement sportif, de salles de réunion, de bureaux et de cuisines pour assurer son bon fonctionnement. 
+      d'insuffisance d'infractrustures, de services et de moyens de déplacements adaptés, Tiki N'Yiki envisage construire un établissement mixte et adapté nommé Accadémie Tiki N'Yiki pour accueillir et soutenir les élèves et étudiant-es en situation de handicap. 
+      Une accréditation sera attribuée à l'académie pour délivrer des diplômes inter-grades.
+      La section infrastructurelle prendra en compte la construction de salles d'étude, de chambres adaptées, de salles de conditionnement sportif, de salles de réunion, de bureaux et de cuisines pour assurer son bon fonctionnement. 
       Les étudiant-es handicapé-es dont les familles habitent en campagne seront permis-es à rester dans les logements adaptés durant le cursus scolaire et bénéficieront de moyens de déplacement 
        pour la mobilité en cas de nécessité.</b>
     </p>
@@ -2461,8 +2470,8 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
       <div class="kgp">
         <img src="https://www.zupimages.net/up/23/28/kkoy.jpg" alt="At office">
       <figure>
-        <figcaption style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: 19px; margin-top: -0.5rem;">
-        <b style="color:#0149fe"> Le handicap n'est pas une fatalité !</b>
+        <figcaption style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: 19px; margin-top: 1rem;">
+        <b style="color:#0177fe"> Le handicap n'est pas une fatalité !</b>
       </figcaption> 
     </figure>
         </div>
@@ -2507,6 +2516,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
