--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 .top-container{
         display: grid;
-        grid-template-columns: 0.55fr 0.75fr 0.5fr 1.25fr;
+        grid-template-columns: 0.55fr 0.5fr 0.5fr 1.45fr;
         justify-content: center;
         justify-items: center;
         width: 100%;
@@ -107,7 +107,7 @@
       height: auto;
       color: gold;
       padding: 10px;
-      margin-top: -1.2rem;
+      margin-top: -1.25rem;
       font-family: verdana; 
       font-size: 14px;
       
@@ -128,7 +128,7 @@
       height: auto;
       color:   gold;
       padding: 10px;
-      margin-top: -1.2rem;
+      margin-top: -1.25rem;
       font-family: verdana; 
       font-size: 14px;
     }
@@ -148,7 +148,7 @@
       height: auto;
       color:   gold;
       padding: 10px;
-      margin-top: -1.2rem;
+      margin-top: -1.25rem;
       font-family: verdana; 
       font-size: 14px;
     }
@@ -184,14 +184,14 @@
       grid-template-rows: 0.85fr 0.8fr 0.5fr 0.95fr;
                  justify-content: center;
                  justify-items: center;
-                 background: rgba(36, 50, 172, 0.992);
+                 background: rgba(32, 47, 177, 0.992);
                  width: 100%;
                  height: 120px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 0 2.98rem 1px rgba(123, 123, 123, 0.421);
+                 box-shadow: 0 0 2rem 1px rgba(47, 65, 230, 0.312);
                  border-bottom: 5.25rem solid #fff;  
           }
           
@@ -214,11 +214,11 @@
 }
 
 .TYK1:hover{
-  background: -webkit-linear-gradient(rgb(255, 4, 0) 1%,red) 99%;
-            border-bottom: 0.69rem solid rgb(45, 255, 34);
-            color: rgba(255, 252, 252, 0.992);
+  background: -webkit-linear-gradient(rgb(255, 1, 1) 1%,rgb(255, 34, 5)) 99%;
+            border-bottom: 0.71rem solid rgb(1, 255, 14);
+            color: rgba(255, 255, 255, 0.992);
             transition: 0.35s ease;
-            box-shadow: 4.4px -4.5px 0.5rem 0 rgba(8, 17, 77, 0.992);
+            box-shadow: 4.45px -5px 0.4rem 0 rgba(4, 11, 54, 0.992);
 }
 
           .navbar0{
@@ -265,7 +265,7 @@
           padding: 8px; 
           font-size: 1.1rem; 
           font-family: 'arial black'; 
-          border-top: 0.12rem solid rgba(37, 51, 180, 0.277);
+          border-top: 0.12rem solid rgba(32, 47, 177, 0.81);
           border-bottom-left-radius: 50rem;
           border-bottom-right-radius: 50rem;
           background: -webkit-linear-gradient( red 0%,  #fff 100%);
@@ -300,11 +300,11 @@
           }
 
           .myDiv:hover{
-            background: -webkit-linear-gradient(rgb(255, 4, 0) 1%,red) 99%;
-            border-bottom: 0.69rem solid rgb(45, 255, 34);
-            color: rgba(255, 252, 252, 0.992);
+            background: -webkit-linear-gradient(rgb(255, 1, 1) 1%,rgb(255, 34, 5)) 99%;
+            border-bottom: 0.71rem solid rgb(1, 255, 14);
+            color: rgba(255, 255, 255, 0.992);
             transition: 0.35s ease;
-            box-shadow: 4.4px -4.5px 0.5rem 0 rgba(8, 17, 77, 0.992);
+            box-shadow: 4.45px -5px 0.4rem 0 rgba(4, 11, 54, 0.992);
           }
 
           .myDiv1{
@@ -325,11 +325,11 @@
           }
 
           .myDiv1:hover{
-            background: -webkit-linear-gradient(rgb(255, 4, 0) 1%,red) 99%;
-            border-bottom: 0.69rem solid rgb(45, 255, 34);
-            color: rgba(255, 252, 252, 0.992);
+            background: -webkit-linear-gradient(rgb(255, 1, 1) 1%,rgb(255, 34, 5)) 99%;
+            border-bottom: 0.71rem solid rgb(1, 255, 14);
+            color: rgba(255, 255, 255, 0.992);
             transition: 0.35s ease;
-            box-shadow: 4.4px -4.5px 0.5rem 0 rgba(8, 17, 77, 0.992);
+            box-shadow: 4.45px -5px 0.4rem 0 rgba(4, 11, 54, 0.992);
           }
 
           .myDiv2{
@@ -350,11 +350,11 @@
             }
 
           .myDiv2:hover{
-            background: -webkit-linear-gradient(rgb(255, 4, 0) 1%,red) 99%;
-            border-bottom: 0.69rem solid rgb(45, 255, 34);
-            color: rgba(255, 252, 252, 0.992);
+            background: -webkit-linear-gradient(rgb(255, 1, 1) 1%,rgb(255, 34, 5)) 99%;
+            border-bottom: 0.71rem solid rgb(1, 255, 14);
+            color: rgba(255, 255, 255, 0.992);
             transition: 0.35s ease;
-            box-shadow: 4.4px -4.5px 0.5rem 0 rgba(8, 17, 77, 0.992);
+            box-shadow: 4.45px -5px 0.4rem 0 rgba(4, 11, 54, 0.992);
           }
 
           .myDivT{
@@ -374,11 +374,11 @@
             font-size: 18px;
           }
           .myDivT:hover{
-            background: -webkit-linear-gradient(rgb(255, 4, 0) 1%,red) 99%;
-            border-bottom: 0.69rem solid rgb(45, 255, 34);
-            color: rgba(255, 252, 252, 0.992);
+            background: -webkit-linear-gradient(rgb(255, 1, 1) 1%,rgb(255, 34, 5)) 99%;
+            border-bottom: 0.71rem solid rgb(1, 255, 14);
+            color: rgba(255, 255, 255, 0.992);
             transition: 0.35s ease;
-            box-shadow: 4.4px -4.5px 0.5rem 0 rgba(8, 17, 77, 0.992);
+            box-shadow: 4.45px -5px 0.4rem 0 rgba(4, 11, 54, 0.992);
           }
 
           .Peinture{
@@ -399,11 +399,11 @@
           }
 
           .Peinture:hover{
-            background: -webkit-linear-gradient(rgb(255, 4, 0) 1%,red) 99%;
-            border-bottom: 0.69rem solid rgb(45, 255, 34);
-            color: rgba(255, 252, 252, 0.992);
+            background: -webkit-linear-gradient(rgb(255, 1, 1) 1%,rgb(255, 34, 5)) 99%;
+            border-bottom: 0.71rem solid rgb(1, 255, 14);
+            color: rgba(255, 255, 255, 0.992);
             transition: 0.35s ease;
-            box-shadow: 4.4px -4.5px 0.5rem 0 rgba(8, 17, 77, 0.992);
+            box-shadow: 4.45px -5px 0.4rem 0 rgba(4, 11, 54, 0.992);
           }
 
 
@@ -425,11 +425,11 @@
             }
 
           .myDiv6:hover{
-            background: -webkit-linear-gradient(rgb(255, 4, 0) 1%,red) 99%;
-            border-bottom: 0.69rem solid rgb(45, 255, 34);
+            background: -webkit-linear-gradient(rgb(255, 1, 1) 1%,rgb(255, 34, 5)) 99%;
+            border-bottom: 0.71rem solid rgb(1, 255, 14);
             color: rgba(255, 255, 255, 0.992);
             transition: 0.35s ease;
-            box-shadow: 4.4px -4.5px 0.5rem 0 rgba(8, 17, 77, 0.992);
+            box-shadow: 4.45px -5px 0.4rem 0 rgba(4, 11, 54, 0.992);
           }
 
 
@@ -888,7 +888,7 @@ animation: auto 12s infinite ease-in;
   height: auto;
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   line-height: 22.6px;
-  color: #063273;
+  color: #0e3570fd;
   word-spacing: 1.5px;
   text-align: left;
   font-size: 18.49px; 
@@ -2517,6 +2517,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
