--- a/index.html
+++ b/index.html
@@ -536,9 +536,7 @@ hr{
     background: transparent;
     justify-content: center;
     align-items: center;
-    padding: 10px;
-    opacity: 0.99;
-    
+    padding: 10px; 
 }
 
 ::-webkit-scrollbar{
@@ -886,13 +884,13 @@ animation: auto 12s infinite ease-in;
 .kpt{
   width: 100%;
   height: auto;
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  line-height: 22.6px;
-  color: #0e3570fd;
+  font-family:Arial, Helvetica, sans-serif;
+  line-height: 25px;
+  color: #1b52a4f5;
   word-spacing: 1.5px;
   text-align: left;
-  font-size: 18.49px; 
-  background: #fff;
+  font-size: 17.49px; 
+  background: transparent;
   border-right: 0.25rem solid transparent;
   border-top: 0.25rem solid transparent;
   padding: 15px;
@@ -2517,17 +2515,3 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
