--- a/index.html
+++ b/index.html
@@ -184,14 +184,14 @@
       grid-template-rows: 0.85fr 0.8fr 0.5fr 0.95fr;
                  justify-content: center;
                  justify-items: center;
-                 background: rgba(32, 48, 192, 0.992);
+                 background: rgba(24, 42, 203, 0.992);
                  width: 100%;
                  height: 120px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 0 2.2rem 1px rgba(56, 74, 239, 0.266);
+                 box-shadow: 0 0 2.75rem 1px rgba(44, 64, 245, 0.302);
                  border-bottom: 5.25rem solid #fff;  
           }
           
@@ -275,10 +275,10 @@
          }
 
          .YIKI:hover{
-          background: -webkit-linear-gradient(#fbfbfbf7 0%, #ffffffff 100%);
+          background: -webkit-linear-gradient(#fffffff7 0%, #ffffffff 100%);
           transition: 0.29s ease;
-          color: #000;
-          box-shadow: 0.2px 0.3px 0.6rem 0 #96969682;
+          color: #252525f4;
+          box-shadow: 0.2px 0.2px 0.6rem 0 #bcbcbcb9;
          }
 
 
@@ -874,7 +874,7 @@ animation: auto 12s infinite ease-in;
   column-gap: 0.5rem;
   justify-items: center;
   justify-content: space-between;
-  width: 85%;
+  width: 83%;
   height: auto;
   border-top: 2rem solid rgba(214, 214, 214, 0.249);;
   margin-top: 4.1rem;
@@ -909,14 +909,16 @@ animation: auto 12s infinite ease-in;
 
 .kgp{
     display: grid;
-    background: #fefefe9c;
     justify-items: center;
     justify-content: center;
     text-align: left;
     width: 100%;
     height: 58%;
-    border-left: 0.25rem solid transparent;
-    border-top: 0.25rem solid transparent;
+    box-shadow: -8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
+    border-left: 0.25rem solid #8eabc8;
+    border-top: 0.25rem solid #8eabc8;
+    background: #f5f5f5d3;
+    border-radius: 0.5rem;
 }
 
 .kgp:hover{
@@ -2515,5 +2517,6 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
