--- a/index.html
+++ b/index.html
@@ -184,14 +184,14 @@
       grid-template-rows: 0.85fr 0.8fr 0.5fr 0.95fr;
                  justify-content: center;
                  justify-items: center;
-                 background: rgba(24, 42, 203, 0.992);
+                 background: rgba(24, 39, 206, 0.974);
                  width: 100%;
                  height: 120px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 0 2.75rem 1px rgba(44, 64, 245, 0.302);
+                 box-shadow: 0 0 2.75rem 1px rgba(49, 68, 245, 0.378);
                  border-bottom: 5.25rem solid #fff;  
           }
           
@@ -265,7 +265,7 @@
           padding: 8px; 
           font-size: 1.1rem; 
           font-family: 'arial black'; 
-          border-top: 0.12rem solid rgba(32, 47, 177, 0.81);
+          border-top: 0.12rem solid rgba(32, 47, 177, 0.663);
           border-bottom-left-radius: 50rem;
           border-bottom-right-radius: 50rem;
           background: -webkit-linear-gradient( red 0%,  #fff 100%);
@@ -2395,27 +2395,31 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </div>
 
 <div class="PaintingTitle">
-  Peinture [à compléter]
+  Diverses images sur l'impact des changements climatiques
 </div>
 
 <div class="Painting">
 
 
 <div class="P1" style="padding: 10px; width: 500px; margin-left: 0.5rem; border: 0.13rem solid #d1d1d1ac; margin-top: 1rem;">
-<h1> Div1 [ Peinture 1 ]</h1>
+<h1> Div1 [ Afrique 1 ]</h1>
 </div>
 
 <div class="P1" style="padding: 10px; border: 0.13rem solid #d1d1d1ac; border-radius: 0.1rem;  width: 500px; margin-top: 1rem; margin-right: 0.5rem;">
-  <h1>Div2 [ Peinture 2 ]</h1>
+  <h1>Div2 [ Asie 2 ]</h1>
 </div>
 
 <div class="P1" style="padding: 10px; border: 0.13rem solid #d1d1d1ac; border-radius: 0.1rem;  width: 500px; margin-left: 0.5rem; margin-bottom: 1rem;">
-<h1>Div3 [ Peinture 3 ]</h1>
+<h1>Div3 [ Amérique 3 ]</h1>
 </div>
 
 <div class="P1" style="padding: 10px; border: 0.13rem solid #d1d1d1ac; border-radius: 0.1rem; width: 500px; margin-right: 0.5rem; margin-bottom: 1rem;">
-<h1> Div4 [ Peinture 4 ]</h1>
+<h1> Div4 [ Europe 4 ]</h1>
 </div>
+
+<div class="P1" style="padding: 10px; border: 0.13rem solid #d1d1d1ac; border-radius: 0.1rem; width: 500px; margin-right: 0.5rem; margin-bottom: 1rem;">
+  <h1> Div5 [ Océanie 5 ]</h1>
+  </div>
 
 </div>
 
@@ -2517,6 +2521,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
