--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       align-items: center;
       width: 100%;
       height: auto;
-      color: gold;
+      color: cyan;
       padding: 10px;
       margin-top: -1.25rem;
       font-family: verdana; 
@@ -116,7 +116,7 @@
     .Translator:hover{
       transition: 0.25s linear;
       width: 100%;
-      color: cyan;
+      color: #fff;
     }
 
     .Calculator{
@@ -126,7 +126,7 @@
       align-items: center;
       width: 100%;
       height: auto;
-      color:   gold;
+      color:   cyan;
       padding: 10px;
       margin-top: -1.25rem;
       font-family: verdana; 
@@ -136,7 +136,7 @@
     .Calculator:hover{
       transition: 0.25s linear;
       width: 100%;
-      color: cyan;
+      color: #fff;
     }
     
     .dico{
@@ -146,7 +146,7 @@
       align-items: center;
       width: 100%;
       height: auto;
-      color:   gold;
+      color: cyan;
       padding: 10px;
       margin-top: -1.25rem;
       font-family: verdana; 
@@ -156,7 +156,7 @@
     .dico:hover{
       transition: 0.25s linear;
       width: 100%;
-      color: cyan;
+      color: #fff;
     }
 
     .datime{
@@ -166,7 +166,7 @@
       align-items: center;
       width: 100%;
       height: auto;
-      color:   gold;
+      color: cyan;
       padding: 10px;
       margin-top: -1.15rem;
       font-family: Verdana; 
@@ -176,7 +176,7 @@
     .datime:hover{
       transition: 0.25s linear;
       width: 100%;
-      color: cyan;
+      color: #fff;
     }
     
     .navbar{
@@ -184,7 +184,7 @@
       grid-template-rows: 0.85fr 0.8fr 0.5fr 0.95fr;
                  justify-content: center;
                  justify-items: center;
-                 background: rgba(55, 69, 222, 0.989);
+                 background: rgba(26, 41, 206, 0.989);
                  width: 100%;
                  height: 120px;
                  object-fit: cover;
@@ -2521,6 +2521,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
