--- a/index.html
+++ b/index.html
@@ -2370,7 +2370,8 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 
 <div class="Texo">
   <p>
-    <br><b style="color: rgb(255, 60, 0)"> N.B. Les changements climatiques ne sont pas des blagues comme certaines personnes le prétendent mais bel et bien une réalité qui se passe présentement sous nos yeux. 
+    <br><b style="word-spacing: normal; font-family: 'comic sans ms'; color: rgb(255, 60, 0); font-size: 19px;"> <em>[ N.B. Le changement climatique est une réalité qui se déroule présentement sous nos propres yeux. Il suffit de voir et remarquer autour de soi.
+      Que fait l'homme pour mitiger cette tendance qui modifie et modifiera notre environnement et par ricocher toute vie sur terre ? ]</em>
     </b>
     <br>
     <br>
@@ -2521,6 +2522,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
