--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 0 3rem 1px rgba(75, 89, 250, 0.367);
+                 box-shadow: 0 0 3rem 1px rgba(83, 97, 255, 0.391);
                  border-bottom: 5.25rem solid #fff;  
           }
           
@@ -537,6 +537,7 @@ hr{
     justify-content: center;
     align-items: center;
     padding: 10px; 
+    opacity: 0.99;
 }
 
 ::-webkit-scrollbar{
@@ -886,7 +887,7 @@ animation: auto 12s infinite ease-in;
   height: auto;
   font-family:Arial, Helvetica, sans-serif;
   line-height: 25px;
-  color: #275daffa;
+  color: #0f346cf3;
   word-spacing: 1.5px;
   text-align: left;
   font-size: 17.49px; 
@@ -2522,16 +2523,5 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
-
-
-
-
-
-
-
-
-
-
-
 
 
