--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 0 3rem 1px rgba(83, 97, 255, 0.391);
+                 box-shadow: 0 0 3.5rem 1px rgba(64, 80, 255, 0.338);
                  border-bottom: 5.25rem solid #fff;  
           }
           
@@ -259,26 +259,27 @@
           flex-direction: column; 
           justify-content: center; 
           align-items: center; 
-          color:rgba(39, 54, 192, 0.992);
+          color:rgba(44, 59, 194, 0.992);
           width: auto; 
           height: 74.5px; 
-          padding: 8px; 
+          padding: 9px; 
           font-size: 1.1rem; 
           font-family: 'arial black'; 
           border-top: 0.12rem solid rgba(41, 54, 199, 0.989);
           border-bottom-left-radius: 50rem;
           border-bottom-right-radius: 50rem;
-          background: -webkit-linear-gradient( red 0%,  #fff 100%);
-          box-shadow: 0.8px 2.47px 0.2rem 0 orangered;
-          margin-left: 14px;
-          margin-top: 0.2rem;
+          background: -webkit-linear-gradient( rgba(255, 0, 0, 0.988) 0%,  #fff 100%);
+          box-shadow: 0.6px 2.4px 0.19rem 0 orangered;
+          margin-left: 15px;
+          margin-top: 0.18rem;
+      
          }
 
          .YIKI:hover{
-          background: -webkit-linear-gradient(#fffffff7 0%, #ffffffff 100%);
-          transition: 0.29s ease;
+          background: -webkit-linear-gradient(#fffffffd 0%, #fff 100%);
+          transition: 0.27s ease;
           color: #252525f4;
-          box-shadow: 0.2px 0.2px 0.6rem 0 #bcbcbcb9;
+          box-shadow: 0.2px 0.1px 0.65rem 0 #b5b4b4ae;
          }
 
 
@@ -2523,5 +2524,6 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
