--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 0 3.5rem 1px rgba(64, 80, 255, 0.39);
+                 box-shadow: 0 0 3.5rem 1px rgba(62, 78, 255, 0.392);
                  border-bottom: 5.25rem solid #fff;  
           }
           
@@ -259,16 +259,15 @@
           flex-direction: column; 
           justify-content: center; 
           align-items: center; 
-          color:rgba(44, 59, 194, 0.992);
+          color:rgba(33, 48, 187, 0.992);
           width: auto; 
           height: 74.5px; 
-          padding: 9px; 
+          padding: 9.5px; 
           font-size: 1.1rem; 
           font-family: 'arial black'; 
-          border-top: 0.12rem solid rgba(41, 54, 199, 0.989);
           border-bottom-left-radius: 50rem;
           border-bottom-right-radius: 50rem;
-          background: -webkit-linear-gradient( rgba(255, 0, 0, 0.988) 0%,  #fff 100%);
+          background: -webkit-linear-gradient( red 0%,#fff 100%);
           box-shadow: 0.6px 2.4px 0.19rem 0 orangered;
           margin-left: 15px;
           margin-top: 0.18rem;
@@ -2524,6 +2523,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
