--- a/index.html
+++ b/index.html
@@ -268,17 +268,16 @@
           border-bottom-left-radius: 50rem;
           border-bottom-right-radius: 50rem;
           background: -webkit-linear-gradient( red 0%,#fff 100%);
-          box-shadow: 0.6px 2.4px 0.19rem 0 orangered;
+          box-shadow: 0.5px 1.5px 0.55rem 0 rgba(169, 169, 169, 0.83);
           margin-left: 15px;
           margin-top: 0.18rem;
-      
          }
 
          .YIKI:hover{
           background: -webkit-linear-gradient(#fffffffd 0%, #fff 100%);
           transition: 0.27s ease;
           color: #252525f4;
-          box-shadow: 0.2px 0.1px 0.65rem 0 #b5b4b4ae;
+          box-shadow: 0.2px 0.1px 0.65rem 0 #adadadae;
          }
 
 
@@ -2523,10 +2522,4 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
-
-
-
-
-
-
 
