--- a/index.html
+++ b/index.html
@@ -2460,7 +2460,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 
   <div class="PHOTOCAPTION">
     <h1> 
-     Feu à Mistissini-Que
+     Feu à Mistissini-Québec
     </h1>
     </div>
   
